# publist

./: .gitignore  Makefile  PubList.hs  publist.cabal  site  site.hs
css/: default.css
templates/: default.html
