name:               publist
version:            0.0.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.7
                  , hakyll == 4.7.*
                  , containers
                  , time
                  , filepath
                  , binary
                  , bytestring
                  , pandoc
                  , directory
                  , ixset >= 1
                  , bibtex >= 0.1
                  , parsec >= 3
  ghc-options:      -threaded
  default-language: Haskell2010
